# aidebates

./: .gitignore  AGENT.md  PROMPT.md  README.md  ai_debate_arena_d9c450cb.plan.md  docker-compose.yml  fix_plan.md  package-lock.json
backend/: .env.example  Dockerfile  pyproject.toml  railway.toml
backend/app/: config.py  main.py
backend/app/middleware/: auth.py
backend/app/models/: __init__.py  api_key.py  debate.py  turn.py  user.py
backend/app/routers/: auth.py  debates.py  health.py  keys.py  turns.py
backend/app/schemas/: __init__.py  debates.py  keys.py  turns.py
backend/app/services/: agent_factory.py  debate_orchestrator.py  encryption.py
backend/app/utils/: sse.py
backend/tests/: conftest.py  test_agent_factory.py  test_auth.py  test_debate_orchestrator.py  test_debates_router.py  test_encryption.py  test_health.py  test_keys_router.py  test_main.py  test_models.py  test_schemas_debates.py  test_schemas_keys.py  test_sse.py  test_turns_router.py
frontend/: .env.example  Dockerfile  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
frontend/__tests__/: AgentConfig.test.tsx  (+13 more)
specs/: 01-database-models.md  02-backend-config.md  03-encryption-service.md  04-api-key-endpoints.md  05-auth-middleware.md  06-debate-crud-endpoints.md  07-agent-factory.md  08-debate-orchestrator.md  09-frontend-setup.md  10-api-client-sse.md  11-debate-manager-store.md  12-api-keys-store.md  13-app-shell-layout.md  14-create-debate-form.md  15-debate-view.md  16-settings-page.md  17-shared-debate-view.md  18-landing-page.md  19-deployment-devops.md
(+29 files in other folders)
