[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "asyncpg>=0.29",
    "cryptography>=42.0",
    "fastapi>=0.110",
    "httpx>=0.27",
    "litellm>=1.40",
    "openai>=1.30",
    "openai-agents>=0.0.7",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
    "python-jose[cryptography]>=3.3",
    "sqlalchemy[asyncio]>=2.0",
    "sse-starlette>=2.0",
    "uvicorn[standard]>=0.29",
]

[dependency-groups]
dev = [
    "httpx>=0.27",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
