[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "asyncpg>=0.29",
    "bcrypt>=4.1",
    "cryptography>=42.0",
    "fastapi[all]>=0.110",
    "httpx>=0.27",
    "litellm>=1.40",
    "openai>=1.30",
    "openai-agents>=0.0.7",
    "tavily-python>=0.5",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
    "PyJWT[crypto]>=2.8",
    "sqlalchemy[asyncio]>=2.0",
    "sse-starlette>=2.0",
    "uvicorn[standard]>=0.29",
]

[dependency-groups]
dev = [
    "httpx>=0.27",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
